--- a/AtomoTest/packages.config
+++ b/AtomoTest/packages.config
@@ -3,4 +3,5 @@
   <package id="NUnit" version="2.5.10.11092" />
   <package id="PowerAssert" version="1.0.2" />
   <package id="NJasmine" version="0.1.0.0" />
+  <package id="PSHostsFile" version="3.0" />
 </packages>
