--- a/AtomoTest/AtomoTest.csproj
+++ b/AtomoTest/AtomoTest.csproj
@@ -46,6 +46,9 @@
     <Reference Include="PowerAssert">
       <HintPath>..\packages\PowerAssert.1.0.2\lib\PowerAssert.dll</HintPath>
     </Reference>
+    <Reference Include="PSHostsFile">
+      <HintPath>..\packages\PSHostsFile.3.0\lib\PSHostsFile.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -56,7 +59,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RunAtomo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
